RESOLVED FIXED173751
Log when scripted animations get suspended and resumed
https://bugs.webkit.org/show_bug.cgi?id=173751
Summary Log when scripted animations get suspended and resumed
Antoine Quint
Reported 2017-06-22 18:02:01 PDT
Log when scripted animations get suspended and resumed
Attachments
Patch (6.39 KB, patch)
2017-06-22 18:02 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2017-06-22 18:02:45 PDT
Dean Jackson
Comment 2 2017-06-22 18:05:17 PDT
Comment on attachment 313680 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313680&action=review > Source/WebCore/ChangeLog:6 > + > + Reviewed by NOBODY (OOPS!). Explain that this is all an attempt to track down an impossible to reproduce bug. > Source/WebCore/dom/Document.cpp:6244 > + WTFLogAlways("\nDocument::requestAnimationFrame, %p", this); > + WTFLogAlways("page? %p", page()); I think these should be a single line. > Source/WebCore/dom/ScriptedAnimationController.cpp:83 > + WTFLogAlways("\nScriptedAnimationController::suspend(), m_suspendCount = %d, %p", m_suspendCount, this); > + WTFLogAlways("Document = %p", &m_document); I think these should be a single line. > Source/WebCore/dom/ScriptedAnimationController.cpp:99 > + WTFLogAlways("\nScriptedAnimationController::resume(), m_suspendCount = %d, %p", m_suspendCount, this); > + WTFLogAlways("Document = %p", &m_document); I think these should be a single line.
Antoine Quint
Comment 3 2017-06-22 18:13:28 PDT
Note You need to log in before you can comment on or make changes to this bug.