Log when scripted animations get suspended and resumed https://bugs.webkit.org/show_bug.cgi?id=173751

Reviewed by Dean Jackson.

More work toward understanding why rAF callbacks are not serviced on bots (webkit.org/b/173628).

* dom/Document.cpp:
(WebCore::Document::requestAnimationFrame):
* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::suspend):
(WebCore::ScriptedAnimationController::resume):
(WebCore::ScriptedAnimationController::logSuspendCount): Deleted.
* dom/ScriptedAnimationController.h:
* page/Page.cpp:
(WebCore::Page::suspendScriptedAnimations):
(WebCore::Page::resumeScriptedAnimations):
(WebCore::Page::setIsVisibleInternal):

Canonical link: https://commits.webkit.org/190613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218730 268f45cc-cd09-0410-ab3c-d52691b4dbfc