Source/WebCore/dom/ScriptedAnimationController.h
@@ -88,7 +88,6 @@ private:
     Document* m_document;
     CallbackId m_nextCallbackId { 0 };
     int m_suspendCount { 0 };
-    void logSuspendCount();
 
     void scheduleAnimation();
     void animationTimerFired();
